[metadata]
name = mevo
version = 0.0.1
author = MorvanZhou
author_email = morvanzhou@hotmail.com
description = evolutionary algorithms in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorvanZhou/mevo
project_urls =
    Bug Tracker = https://github.com/MorvanZhou/mevo/issues
    Source=https://github.com/MorvanZhou/mevo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.20.0
    dataclasses >= 0.8; python_version < "3.7"

[options.packages.find]
where = src

[options.extras_require]
build =
    tox==3.24.3
    build
    twine
    pylint
test =
    gymnasium[classic_control]>=0.27.1
